--- a/application.properties
+++ b/application.properties
@@ -1,1 +1,3 @@
-
+eureka.instances.prefer-ip-address=true
+eureka.client.fetch-registry=true
+eureka.client.service-url.defaultZone:  http://localhost:8761/eureka
